# libTmcHelpers

./: CMakeLists.txt  README.md  dynamicstructure.cpp  dynamicstructure.h  strextra.cpp  strextra.h  tmc_global_1to1_algos.cpp  tmc_global_1to1_algos.h  tmc_global_prompts.cpp  tmc_global_prompts.h  tmc_global_types.h  tmc_math.cpp  tmc_math.h  vectextra.cpp  vectextra.h
